external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_misspelled_key_constraint.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/struct_type_misspelled_key_constraint.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_misspelled_key_constraint.move:3:17
  │
3 │     struct S<T: ky> { }
  │                 ^^ Unexpected 'ky'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

